tests/rustdoc-ui/doc-cfg-2.stderr
warning: unexpected `cfg` condition name: `foo`
  --> $DIR/doc-cfg-2.rs:3:11
   |
LL | #[doc(cfg(foo), cfg(bar))]
   |           ^^^
   |
   = help: expected names are: `FALSE` and `test` and 31 more
   = help: to expect this configuration use `--check-cfg=cfg(foo)`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg.html> for more information about checking conditional configuration
   = note: `#[warn(unexpected_cfgs)]` on by default

warning: unexpected `cfg` condition name: `bar`
  --> $DIR/doc-cfg-2.rs:3:21
   |
LL | #[doc(cfg(foo), cfg(bar))]
   |                     ^^^
   |
   = help: to expect this configuration use `--check-cfg=cfg(bar)`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg.html> for more information about checking conditional configuration

error: only `hide` or `show` are allowed in `#[doc(auto_cfg(...))]`
  --> $DIR/doc-cfg-2.rs:6:16
   |
LL | #[doc(auto_cfg(42))]
   |                ^^
   |
   = note: `#[deny(invalid_doc_attributes)]` on by default

error: `#![doc(auto_cfg(hide(...)))]` only accepts identifiers or key/value items
  --> $DIR/doc-cfg-2.rs:7:21
   |
LL | #[doc(auto_cfg(hide(true)))]
   |                     ^^^^

error: `#![doc(auto_cfg(hide(...)))]` only accepts identifiers or key/value items
  --> $DIR/doc-cfg-2.rs:8:21
   |
LL | #[doc(auto_cfg(hide(42)))]
   |                     ^^

error: `#![doc(auto_cfg(hide(...)))]` only accepts identifiers or key/value items
  --> $DIR/doc-cfg-2.rs:9:21
   |
LL | #[doc(auto_cfg(hide("a")))]
   |                     ^^^

error: expected boolean for `#[doc(auto_cfg = ...)]`
  --> $DIR/doc-cfg-2.rs:10:18
   |
LL | #[doc(auto_cfg = 42)]
   |                  ^^

error: expected boolean for `#[doc(auto_cfg = ...)]`
  --> $DIR/doc-cfg-2.rs:11:18
   |
LL | #[doc(auto_cfg = "a")]
   |                  ^^^

warning: unexpected `cfg` condition name: `feature`
  --> $DIR/doc-cfg-2.rs:14:21
   |
LL | #[doc(auto_cfg(hide(feature = "windows")))]
   |                     ^^^^^^^^^^^^^^^^^^^
   |
   = help: to expect this configuration use `--check-cfg=cfg(feature, values("windows"))`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg.html> for more information about checking conditional configuration

warning: unexpected `cfg` condition name: `foo`
  --> $DIR/doc-cfg-2.rs:16:21
   |
LL | #[doc(auto_cfg(hide(foo)))]
   |                     ^^^
   |
   = help: to expect this configuration use `--check-cfg=cfg(foo)`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg.html> for more information about checking conditional configuration

error: aborting due to 6 previous errors; 4 warnings emitted

